--- a/property-single.html
+++ b/property-single.html
@@ -181,10 +181,12 @@
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
+            <div class="tab-content">
+
               <div class="tab-pane fade show active" id="real-estate-2-tab1">
 				  
 				 <iframe style="border:0; width: 100%; height: 400px;" 
-            		src="https://www.youtube.com/embed/Vs2inzkMPGA?si=q9yVL_tJLf0GqJ02" 
+            		src="https://www.youtube.com/embed/S4MV0RHe-Pw?si=JcGayuZefhjB-DH2" 
             		frameborder="0" 
             		loading="lazy" allow="accelerometer; autoplay; clipboard-write; 
             		encrypted-media; gyroscope; picture-in-picture; web-share" 
