--- a/about.html
+++ b/about.html
@@ -56,25 +56,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="contact.html" >Contact</a></li>
+          <li><a href="about.html" class="active">About Us</a></li>
+          <li><a href="contact.html" >Contact Us</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -91,20 +74,14 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>About</h1>
-              <p class="mb-0">We VSS Housing (P) Ltd. Are one of the fast growing dealer in property business. We started our operation 20 years ago. We VSS Housing (P) Ltd.  serving under the able guidance of Mr. Vijay Kumar Saraogi and our offers include a wide range of real estate deals in Jhansi and around the nearby area.</p>
+              <h1>About Us</h1>
+              <p class="mb-0">
+                At VSS Housing (P) Ltd., we take pride in being one of the fastest-growing real estate dealers in Jhansi. With over 20 years of experience under the able guidance of Mr. Vijay Kumar Saraogi, we offer a wide range of property solutions tailored to meet your needs. From residential to commercial deals, our expertise ensures you find the perfect property in Jhansi and the surrounding areas.
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <nav class="breadcrumbs">
-        <div class="container">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
-          </ol>
-        </div>
-      </nav>
     </div><!-- End Page Title -->
 
     <!-- About Section -->
@@ -116,15 +93,14 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p class="who-we-are">Who We Are</p>
-            <h3>Unleashing Potential with Creative Strategy</h3>
+            <h3>From Vision to Reality</h3>
             <p class="fst-italic">
-              We VSS Housing (P) Ltd. Are both constructor cum dealer of every type of property whether that is plot or built infrastructur.
-              We have expertness and wide experience in dealing of every type of residential, Commercial .
+              We, VSS Housing (P) Ltd., are both constructors and dealers of all types of properties, whether plots or built infrastructure. With extensive expertise and years of experience, we handle every aspect of residential and commercial real estate.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Expert guidance for buying, selling, and investing in properties.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Wide range of residential and commercial real estate options.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Trusted experience with 20+ years in the property market, ensuring reliable and seamless transactions.</span></li>
             </ul>
           </div>
 
@@ -152,109 +128,64 @@
       </div>
     </section><!-- /About Section -->
 
-    <!-- Stats Section -->
-    <section id="stats" class="stats section">
+    <!-- Directors Section -->
+    <section id="agents" class="agents section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="2320" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
-              </div>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
-              </div>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-graph-up-arrow color-green flex-shrink-0"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Annual Turnover (Cr)</p>
-              </div>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-people color-pink flex-shrink-0"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="1500" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hard Workers</p>
-              </div>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
-
-    <!-- Features Section -->
-    <section id="features" class="features section">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Our Directors</h2>
+        <p>
+          Meet our directors, leading VSS Housing with vision and strategic insight.
+        </p>
+      </div><!-- End Section Title -->
 
       <div class="container">
 
-        <div class="row justify-content-around gy-4">
-          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/features-bg.jpg" alt=""></div>
+        <div class="row gy-5">
 
-          <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-easel flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>VIJAY KUMAR SARAOGI</h4>
+                <span>Chairman & Managing Director</span>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
+          </div><!-- End Team Member -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-patch-check flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>SHUBHAM SARAOGI</h4>
+                <span>Director</span>
+                <div class="social">
+                  <a href="https://www.instagram.com/shubham_saraogi"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/shubham-saraogi-1656b6148"><i class="bi bi-linkedin"></i></a>
+                </div>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
+          </div><!-- End Team Member -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="member">
+              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>SHOURYA SARAOGI</h4>
+                <span>Director<br></span>
+                <div class="social">
+                  <a href="https://www.instagram.com/shourya._.saraogi"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/shourya-saraogi-3a9612211"><i class="bi bi-linkedin"></i></a>
+                </div>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
+          </div><!-- End Team Member -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Tride clov</a></h4>
-                <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet. Et eligendi</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-          </div>
         </div>
 
       </div>
 
-    </section><!-- /Features Section -->
+    </section><!-- /Directors Section -->
 
   </main>
 
