--- a/index.html
+++ b/index.html
@@ -56,25 +56,8 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -97,7 +80,7 @@
             <div>
               <p>Unnao-Balaji Road, Jhansi</p>
               <h2><span>Shubham</span> Residency</h2>
-              <a href="properties/shubham-residency.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -108,7 +91,7 @@
             <div>
               <p>Elite, Jhansi</p>
               <h2><span>Ghanaram</span> Mall</h2>
-              <a href="properties/ghanaram-mall.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -119,7 +102,7 @@
             <div>
               <p>Gwalior-Kanpur Bypass, Jhansi</p>
               <h2><span>Myraa</span> Greens</h2>
-              <a href="properties/myraa-greens.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -130,7 +113,7 @@
             <div>
               <p>Elite, Jhansi</p>
               <h2><span>Hotel</span> Kunwer Palace</h2>
-              <a href="properties/kunwer-palace.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -141,7 +124,7 @@
             <div>
               <p>Sipri, Jhansi</p>
               <h2><span>Shubham Business</span> Tower</h2>
-              <a href="properties/shubham-business-tower.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -153,7 +136,7 @@
             <div>
               <p>Bhagwantpura, Jhansi</p>
               <h2><span>VSS</span> High-Street</h2>
-              <a href="properties/vss-high-street.html" class="btn-get-started">Explore More</a>
+              <a href="projects.html" class="btn-get-started">View All Projects</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -193,7 +176,7 @@
                 <i class="bi bi-house"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Group Housing Construction</h3>
+                <h3>Group Housing Development</h3>
               </a>
             </div>
           </div><!-- End Service Item -->
@@ -215,7 +198,7 @@
                 <i class="bi bi-buildings"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Commercial Construction</h3>
+                <h3>Commercial Development</h3>
               </a>
             </div>
           </div><!-- End Service Item -->
@@ -238,7 +221,7 @@
                 <i class="bi bi-people"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-               <h3>Joint Venture Construction</h3>
+               <h3>Joint Venture Development</h3>
               </a>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
