--- a/properties/suncity.html
+++ b/properties/suncity.html
@@ -150,20 +150,15 @@
               </p>
             </div><!-- End Portfolio Description -->
 
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1">Floor Plans</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2">Location</a></li>
-            </ul><!-- End Tabs -->
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio-description-2">
+              <h3>Location</h3>
+            </div>
+          </div>
 
             <!-- Tab Content -->
             <div class="tab-content">
-              
-                            <div class="tab-pane fade show active" id="real-estate-2-tab1">
-				        <img style="width: 100%; height: 400px;" src="../assets/img/floor-plan.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade" id="real-estate-2-tab2">
+              <div class="tab-pane fade show active" id="real-estate-2-tab2">
                 <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.923666200009!2d78.5785992!3d25.507592199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397775f7e15fdc5d%3A0x29da343a04044b44!2sSuncity!5e0!3m2!1sen!2sin!4v1757788843814!5m2!1sen!2sin" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div><!-- End Tab 2 Content -->
             </div><!-- End Tab Content -->
